# fantasy-companion

data-service/data/: fbref_data.json
data-service/fbref/fbref-data/: data_structure.json
data-service/fbref/fbref-data/epl/: players_defensive_stats  players_goalkeeping_stats  players_standard_stats  teams_fixtures  teams_stats
data-service/fbref/fbref-data/la-liga/: players_defensive_stats  players_goalkeeping_stats  players_standard_stats  teams_fixtures  teams_stats
data-service/fbref/fbref-data/season24-25/epl/: teams_fixtures_24  teams_stats_24
data-service/helper/: fbref_data_structure.json  fbref_data_to_json.py
fdr-service/: pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py  setup.py
fdr-service/api/: main.py
fdr-service/api/endpoints/: fixtures.py  teams.py
fdr-service/api/models/: __init__.py  schemas.py
fdr-service/fdr_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fdr-service/output/: pipeline_summary.json
fdr-service/src/: __init__.py
fdr-service/src/core/: __init__.py  config.py  pipeline.py
fdr-service/src/data/: __init__.py  extractor.py  preprocessor.py
fdr-service/src/models/: __init__.py  base.py  fixture_predictor.py  team_rater.py
fdr-service/src/utils/: __init__.py  explainer.py  validation.py
fdr-service/tests/: conftest.py  test_data_extraction.py  test_feature_engineering.py  test_real_data_extraction.py  test_team_rating.py  test_validation.py
power-index-service/api/: routes.py
power-index-service/src/power_index_calculator/: calculator.py  data_loader.py  models.py
(+2 files in other folders)
